###############################################################################
## Project Source #############################################################
###############################################################################
target_sources(p2p_file_sync 
    PRIVATE
    "log.h"
    "ip_addr.h" "ip_addr.cc"
    "config_reader.h" "config_reader.cc"
)

###############################################################################
## Cert Utils #################################################################
###############################################################################
add_subdirectory(cert)

###############################################################################
## Testing Source #############################################################
###############################################################################
file(GLOB TEST_SRC_FILES 
    ${CMAKE_CURRENT_LIST_DIR}/test/*_test.cc)
    
target_sources(p2p_file_sync_test PRIVATE 
    ${TEST_SRC_FILES}
    "ip_addr.h" "ip_addr.cc"
)