###############################################################################
## Project Source #############################################################
###############################################################################
target_sources(daemon 
    PRIVATE
    "log.h"
    "parsing.h" "parsing.cc"
        "uuid_utils.cc" "uuid_utils.h"
    "config_reader.h" "config_reader.cc"
)

###############################################################################
## Cert Utils #################################################################
###############################################################################
add_subdirectory(cert)

###############################################################################
## Testing Source #############################################################
###############################################################################
file(GLOB TEST_SRC_FILES 
    ${CMAKE_CURRENT_LIST_DIR}/test/*_test.cc)
    
target_sources(daemon PRIVATE 
    ${TEST_SRC_FILES}
    "parsing.h" "parsing.cc"
)