###############################################################################
## User space Filesystem ######################################################
###############################################################################
add_library(fuse_mount)

###############################################################################
## Dependency #################################################################
###############################################################################
find_package(FUSE REQUIRED)
target_link_libraries(fuse_mount ${FUSE_LIBRARIES})
target_include_directories(fuse_mount PRIVATE ${FUSE_INCLUDE_DIR})
    
