###############################################################################
## Project Source #############################################################
###############################################################################
target_sources(p2p_file_sync 
    PRIVATE
    "manage.h" "manage.cc"
)

###############################################################################
## Manage Utils ###############################################################
###############################################################################
target_sources(p2p_file_sync 
    PRIVATE
    "utils/command_utils.h" "utils/command_utils.cc"
)

###############################################################################
## Supported Commands #########################################################
###############################################################################
add_subdirectory(commands)

###############################################################################
## Testing Source #############################################################
###############################################################################
file(GLOB TEST_SRC_FILES 
    ${CMAKE_CURRENT_LIST_DIR}/test/*_test.cc)
    
target_sources(test_target PRIVATE ${TEST_SRC_FILES})