###############################################################################
## Project Source #############################################################
###############################################################################
target_sources(p2p_file_sync 
    PRIVATE
    "manage.h" "manage.cc"
)

###############################################################################
## Manage Utils ###############################################################
###############################################################################
file(GLOB MANAGE_UTILS_SRCS 
    ${CMAKE_CURRENT_LIST_DIR}/utils/*.cc)
    
target_sources(p2p_file_sync PRIVATE ${MANAGE_UTILS_SRCS})

###############################################################################
## Supported Commands #########################################################
###############################################################################
add_subdirectory(commands)

###############################################################################
## Dependency #################################################################
###############################################################################
# google log
find_package(Libevent CONFIG REQUIRED)
target_link_libraries(p2p_file_sync libevent::core libevent::extra )
target_include_directories(p2p_file_sync PRIVATE ${Libevent_CORE_INCLUDE_DIRS})

###############################################################################
## Testing Source #############################################################
###############################################################################
file(GLOB TEST_SRC_FILES 
    ${CMAKE_CURRENT_LIST_DIR}/test/*_test.cc)
    
target_sources(test_target PRIVATE 
    ${TEST_SRC_FILES} 
    "utils/parsing.h" "utils/parsing.cc"
)
